Fix typo in service label for guestbook

--- a/k8s/arash-guestbook-service.yaml
+++ b/k8s/arash-guestbook-service.yaml
@@ -3,7 +3,7 @@ kind: Service
 metadata:                                                                 
   name: arash-nginx-guestbook
   labels:
-    app: arash-nginx-guestbook
+    app: arash-nginx-guestbookk
 spec:
   type: ClusterIP
   ports:
