--- a/k8s/arash-config.yaml
+++ b/k8s/arash-config.yaml
@@ -1,9 +1,9 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: guestbook-config
+  name: arash-db-config
 data:
   db-name: guestbook
-  db-host: postgres
-  redis-host: redis
+  db-host: arash-postgres
+  redis-host: arash-redis
   redis-port: "6379"
