--- a/k8s/arash-guestbook-frontend.yaml
+++ b/k8s/arash-guestbook-frontend.yaml
@@ -1,38 +1,46 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: nginx
+  name: arash-frontend
 spec:
   replicas: 2
   selector:
     matchLabels:
-      app: nginx
+      app: arash-guestbook
+      component: frontend
   template:
     metadata:
       labels:
-        app: nginx
+        app: arash-guestbook
+        component: frontend
     spec:
       containers:
-        - name: nginx
-          image: quay.io/hardo314/nginx-frontend:2
+        - name: frontend
+          image: ghcr.io/billare/guestbook-frontend:latest
           imagePullPolicy: Always
+          ports:
+            - containerPort: 8080
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  name: nginx
+  name: arash-frontend
 spec:
   type: ClusterIP
   selector:
-    app: nginx
+    app: arash-guestbook
+    component: frontend
   ports:
     - port: 8080
+      targetPort: 8080
 ---
 apiVersion: route.openshift.io/v1
 kind: Route
 metadata:
-  name: nginx
+  name: arash-frontend
 spec:
   to:
     kind: Service
-    name: nginx
+    name: arash-frontend
+  port:
+    targetPort: 8080
