Update backend image in arash-backend.yaml

--- a/k8s/arash-backend.yaml
+++ b/k8s/arash-backend.yaml
@@ -139,7 +139,7 @@ spec:
     spec:
       containers:
         - name: backend
-          image: ghcr.io/billare/guestbook-backend:latest
+          image: arashr/arash-guestbook:backend
           ports:
             - containerPort: 8080
           env:
