--- a/k8s/arash-frontend.yaml
+++ b/k8s/arash-frontend.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
         - name: frontend
-          image: ghcr.io/billare/guestbook-frontend:latest
+          image: arashr/arash-guestbook:frontend
           imagePullPolicy: Always
           ports:
             - containerPort: 8080
