--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,20 +8,27 @@ jobs:
     steps:
     - name: Checkout
       uses: actions/checkout@v6.0.1
+    
     - name: Login to Docker Hub
       uses: docker/login-action@v3
       with:
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
+    
     - name: Build backend container
       run: |
-        docker build -f backend/Containerfile -t arashr/arash-guestbook:backend ./backend
-        
+        docker build -f backend/Containerfile -t arashr/arash-guestbook:backend -t arashr/arash-guestbook:backend-latest ./backend
+    
     - name: Build frontend container
       run: |
-        docker build -f frontend/Containerfile -t arashr/arash-guestbook:frontend ./frontend
-        
-    - name: Push containers
+        docker build -f frontend/Containerfile -t arashr/arash-guestbook:frontend -t arashr/arash-guestbook:frontend-latest ./frontend
+    
+    - name: Push backend containers
       run: |
         docker push arashr/arash-guestbook:backend
+        docker push arashr/arash-guestbook:backend-latest
+    
+    - name: Push frontend containers
+      run: |
         docker push arashr/arash-guestbook:frontend
+        docker push arashr/arash-guestbook:frontend-latest
