--- a/k8s/arash-backend.yaml
+++ b/k8s/arash-backend.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: arash-postgres-pvc
+  namespace: grupp3
 spec:
   accessModes:
     - ReadWriteOnce
@@ -13,6 +14,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: arash-postgres
+  namespace: grupp3
 spec:
   replicas: 1
   selector:
@@ -63,6 +65,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: arash-postgres
+  namespace: grupp3
 spec:
   type: ClusterIP
   selector:
@@ -76,6 +79,7 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: arash-redis-pvc
+  namespace: grupp3
 spec:
   accessModes:
     - ReadWriteOnce
@@ -87,6 +91,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: arash-redis
+  namespace: grupp3
 spec:
   replicas: 1
   selector:
@@ -127,6 +132,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: arash-redis
+  namespace: grupp3
 spec:
   type: ClusterIP
   selector:
@@ -139,6 +145,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: arash-backend
+  namespace: grupp3
 spec:
   replicas: 2
   selector:
@@ -190,6 +197,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: arash-backend
+  namespace: grupp3
 spec:
   type: ClusterIP
   selector:
