--- a/k8s/arash-frontend.yaml
+++ b/k8s/arash-frontend.yaml
@@ -2,6 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: arash-frontend
+  namespace: grupp3
 spec:
   replicas: 2
   selector:
@@ -20,11 +21,19 @@ spec:
           imagePullPolicy: Always
           ports:
             - containerPort: 8080
+          resources:
+            requests:
+              cpu: 100m
+              memory: 128Mi
+            limits:
+              cpu: 250m
+              memory: 256Mi
 ---
 apiVersion: v1
 kind: Service
 metadata:
   name: arash-frontend
+  namespace: grupp3
 spec:
   type: ClusterIP
   selector:
@@ -38,6 +47,7 @@ apiVersion: route.openshift.io/v1
 kind: Route
 metadata:
   name: arash-frontend
+  namespace: grupp3
 spec:
   to:
     kind: Service
