--- a/k8s/arash-config.yaml
+++ b/k8s/arash-config.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: arash-db-config
+  namespace: grupp3
 data:
   db-name: guestbook
   db-host: arash-postgres
